--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,3 +7,11 @@ jobs:
     steps:
       - name: greeting
         uses: actions/checkout@v5
+  
+  second_job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Docker
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker.io 
