--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,9 @@ jobs:
   
   second_job:
     runs-on: ubuntu-latest
+    needs: first_job
     steps:
       - name: Install Docker
         run: |
           sudo apt-get update
-          sudo apt-get install -y docker.io 
+          sudo apt-get install -y docker
