--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,3 +16,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y docker
+
+  third_job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run a Docker container
+        run: |
+          docker run hello-world        
