--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,18 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker
 
+  fourth_job:
+    runs-on: ubuntu-latest
+    needs: second_job
+    steps:
+      - name: build Docker image
+        run: |
+          docker pull alpine:latest
+      - name: upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: alpine-image     
+
   third_job:
     runs-on: ubuntu-latest
     steps:
