--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,9 @@ jobs:
   second_job:
     runs-on: ubuntu-latest
     steps:
-      - name: Install java
+      - name: update
         run: |
           sudo apt-get update
-          sudo apt-get install java-11-openjdk -y
 
   fourth_job:
     runs-on: ubuntu-latest
@@ -26,7 +25,8 @@ jobs:
       - name: upload artifact
         uses: actions/upload-artifact@v6.0.0
         with:
-          name: alpine-image     
+          name: alpine-image
+          path: /tmp/alpine-image     
 
   third_job:
     runs-on: ubuntu-latest
