--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,19 @@ jobs:
         uses: actions/upload-artifact@v6.0.0
         with:
           name: alpine-image
-          path: /tmp/alpine-image     
+          path: /var/alpine-image     
 
   third_job:
     runs-on: ubuntu-latest
     steps:
       - name: Run a Docker container
         run: |
-          docker run hello-world        
+          docker run hello-world 
+  fifth_job:
+    runs-on: macos-latest
+    needs: fourth_job
+    steps:
+      - name: download artifact
+        uses: actions/download-artifact@v3.2.1
+        with:
+          name: alpine-image               
