--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,6 @@ jobs:
     runs-on: macos-latest
     needs: fourth_job
     steps:
-      - name: download artifact
-        uses: actions/download-artifact@v7.0.0
-        with:
-          name: alpine-image               
+      - name: downlaod-docker-images
+        run: |
+          docker pull alpine:latest            
