--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,16 @@ jobs:
   first_job:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        image: [alpine, ubuntu]
+        os: [ubuntu-latest
+        image: [alpine, ubuntu, hello-world, nginx, redis, postgres, node, mysql] 
       fail-fast: false
-      max-parallel: 2
+      max-parallel: 1
     runs-on: ${{ matrix.os }}
     steps:
       - name: greeting
+        run: |
+          docker --version
+      - name: pull docker image
         run: |
           docker pull ${{ matrix.image }}:latest
   
@@ -19,8 +22,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: update
-        run: |
-          sudo apt-get update
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+      - name: Install terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: '1.5.6'    
 
   fourth_job:
     runs-on: ubuntu-latest
