--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,16 @@
-name: worflows
-on: push
+name: workflows
+
+on:
+  push:
+    branches:
+      - main  # Adjust as needed
 
 jobs:
   first_job:
     strategy:
       matrix:
-        os: [ubuntu-latest
-        image: [alpine, ubuntu, hello-world, nginx, redis, postgres, node, mysql] 
+        os: [ubuntu-latest]
+        image: [alpine, ubuntu, hello-world, nginx, redis, postgres, node, mysql]
       fail-fast: false
       max-parallel: 1
     runs-on: ${{ matrix.os }}
@@ -17,7 +21,7 @@ jobs:
       - name: pull docker image
         run: |
           docker pull ${{ matrix.image }}:latest
-  
+
   second_job:
     runs-on: ubuntu-latest
     steps:
@@ -28,7 +32,7 @@ jobs:
       - name: Install terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: '1.5.6'    
+          terraform_version: '1.5.6'
 
   fourth_job:
     runs-on: ubuntu-latest
@@ -41,18 +45,19 @@ jobs:
         uses: actions/upload-artifact@v6.0.0
         with:
           name: alpine-image
-          path: /var/alpine-image     
+          path: /var/alpine-image
 
   third_job:
     runs-on: ubuntu-latest
     steps:
       - name: Run a Docker container
         run: |
-          docker run hello-world 
+          docker run hello-world
+
   fifth_job:
     runs-on: macos-latest
     needs: fourth_job
     steps:
-      - name: install dcoker on macos
+      - name: install docker on macos
         run: |
-          brew install --cask docker           
+          brew install --cask docker
