--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ name: workflows
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened]
     branches:
       - main  # Adjust as needed
 
